stipe testing is working

--- a/cacee-backend/package.json
+++ b/cacee-backend/package.json
@@ -13,7 +13,8 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.8.4"
+    "mongoose": "^5.8.4",
+    "stripe": "^8.15.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
