--- a/cacee-frontend/package.json
+++ b/cacee-frontend/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-stripe-elements": "^6.0.1",
+    "react-stripe-script-loader": "^1.1.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
